--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -7,7 +7,7 @@ build:
     build:
       # Install dependencies into the App Runner environment
       - pip3 install --upgrade pip
-      - pip3 install -r requirements.txt
+      - pip3 install -r app/requirements.txt
 
 run:
   runtime-version: 3.11
